src/test/resources/nox/errors/err_index_oob.nox
// @test:error "IndexOutOfBoundsError"
main() {
    int[] arr = [];
    return arr[1];
}
